# trabalho-cg

./: .gitmodules  Cargo.toml  README.md  config.toml
assets/bee/: bee.mtl
assets/blocks/: glowstone.mtl  minecart.mtl
assets/creeper/: creeper.mtl
assets/heart/: Heart.mtl
assets/lost_empire/: lost_empire.mtl
assets/steve/: steve.mtl
assets/wither-skeleton/: wither-skeleton.mtl
src/: gui.rs  main.rs  shaders.rs
